# api/gen/docs/openapi.yaml
@@ -3,27 +3,52 @@
 
 openapi: 3.0.3
 info:
-    title: Example API
+    title: UserService API
     version: 0.0.1
 paths:
-    /example/hello/{name}:
-        get:
+    /user:
+        post:
             tags:
-                - Example
-            operationId: Example_Hello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
+                - UserService
+            operationId: UserService_CreateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateUserRequest'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/HelloResponse'
+                                $ref: '#/components/schemas/CreateUserResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /user/{id}:
+        get:
+            tags:
+                - UserService
+            operationId: UserService_GetUserByID
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserByIDResponse'
                 default:
                     description: Default error response
                     content:
@@ -32,6 +57,26 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        CreateUserRequest:
+            type: object
+            properties:
+                email:
+                    type: string
+                password:
+                    type: string
+                username:
+                    type: string
+        CreateUserResponse:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+        GetUserByIDResponse:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/User'
         GoogleProtobufAny:
             type: object
             properties:
@@ -40,11 +85,6 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        HelloResponse:
-            type: object
-            properties:
-                message:
-                    type: string
         Status:
             type: object
             properties:
@@ -61,5 +101,26 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        User:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                email:
+                    type: string
+                username:
+                    type: string
+                status:
+                    type: integer
+                    format: uint32
+                lastLoginAt:
+                    type: string
+                createdAt:
+                    type: string
+                updatedAt:
+                    type: string
+                deletedAt:
+                    type: string
 tags:
-    - name: Example
+    - name: UserService
